fix(components/atom/label): fix atom label color contrast type mode

--- a/components/atom/label/src/styles/index.scss
+++ b/components/atom/label/src/styles/index.scss
@@ -44,11 +44,11 @@ $base-class: '.sui-AtomLabel';
     pointer-events: none;
   }
 
-  @each $type, $color, $optionalColor in $c-atom-label-type {
+  @each $type, $color in $c-atom-label-type {
     &--#{$type} {
       color: $color;
       #{$base-class}-optionalText {
-        color: $optionalColor;
+        color: $c-gray;
       }
     }
   }
